Refactor form3 and add resources

--- a/Kropiner/Kropiner.csproj
+++ b/Kropiner/Kropiner.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="Rate.resx">
       <DependentUpon>Rate.cs</DependentUpon>
